--- a/PhotoZap/Base.lproj/LaunchScreen.xib
+++ b/PhotoZap/Base.lproj/LaunchScreen.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6214" systemVersion="14A314h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -23,6 +23,15 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PhotoZapLaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="ddw-VO-fJR">
+                    <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenPic" translatesAutoresizingMaskIntoConstraints="NO" id="ruZ-bx-YF3">
+                    <rect key="frame" x="15" y="176" width="450" height="128"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="128" id="Ahq-Sz-TMo"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -30,12 +39,30 @@
                 <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
                 <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
+                <constraint firstItem="ruZ-bx-YF3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="N8u-bP-v5B"/>
+                <constraint firstAttribute="trailing" secondItem="ruZ-bx-YF3" secondAttribute="trailing" constant="15" id="O8O-Mo-c0f"/>
+                <constraint firstItem="ddw-VO-fJR" firstAttribute="centerY" secondItem="ruZ-bx-YF3" secondAttribute="centerY" id="OD0-i5-j0n"/>
                 <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
+                <constraint firstItem="ddw-VO-fJR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="civ-mD-Ipx"/>
+                <constraint firstAttribute="trailing" secondItem="ddw-VO-fJR" secondAttribute="trailing" id="epk-b5-kMv"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstItem="ddw-VO-fJR" firstAttribute="centerX" secondItem="ruZ-bx-YF3" secondAttribute="centerX" id="hNZ-Ew-GMM"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="ddw-VO-fJR" secondAttribute="bottom" id="hYi-0L-GxU"/>
+                <constraint firstItem="ddw-VO-fJR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="lpN-Zv-rrQ"/>
+                <constraint firstAttribute="bottom" secondItem="ddw-VO-fJR" secondAttribute="bottom" id="xxW-qn-Cxm"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="hYi-0L-GxU"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
+    <resources>
+        <image name="LaunchScreenPic" width="690" height="892"/>
+        <image name="PhotoZapLaunchScreen" width="1024" height="1024"/>
+    </resources>
 </document>
