--- a/PhotoZap/Base.lproj/Main.storyboard
+++ b/PhotoZap/Base.lproj/Main.storyboard
@@ -352,7 +352,9 @@
                             <constraint firstItem="5eW-3D-hA9" firstAttribute="top" secondItem="QmD-Xj-tVL" secondAttribute="bottom" id="ubW-hL-PZ7"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Notifications" id="3HE-aj-AGr"/>
+                    <navigationItem key="navigationItem" title="Notifications" id="3HE-aj-AGr">
+                        <barButtonItem key="rightBarButtonItem" title="Settings" id="whA-To-Maj"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="5eW-3D-hA9" id="2iM-Pi-Djh"/>
                     </connections>
